# linter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test_suite.py
.github/workflows/: release.yaml  test.yaml
integration_tests/frozendict_dict/: test_empty.sh  test_errors.sh  test_write_change.sh
integration_tests/set_comprehension/: test_commented.sh  test_empty.sh  test_errors.sh  test_write_change.sh
integration_tests/string_keyed_dict/: test_commented.sh  test_empty.sh  test_errors.sh  test_write_change.sh
linter/: __init__.py  __main__.py  feedback.py  file_checker.py  file_checker_test.py  fullset.py  main.py  noqa_finder.py  noqa_finder_test.py  position.py  report.py  report_test.py  rule.py  rule_manager.py  rule_manager_test.py  test_utils.py
linter/rules/: __init__.py  frozendict_dict.py  frozendict_dict_test.py  set_comprehension.py  set_comprehension_test.py  string_keyed_dict.py  string_keyed_dict_test.py
src/: config.py  feedback.py  file_checker.py  fullset.py  fullset_test.py  noqa_finder.py  noqa_finder_test.py  position.py  report.py  report_test.py  rule.py  rule_manager.py  rule_manager_test.py  test_utils.py  violation.py
src/rules/: string_keyed_dict.py  string_keyed_dict_test.py
test_data/frozendict_dict/: combined.py  combined_expected.py  errors.py  expected.py  indirect.py  indirect_expected.py  no_errors.py
test_data/general/: syntax.py
test_data/noqa/: many_noqas.py
test_data/set_comprehension/: commented.py  errors.py  expected.py  no_errors.py
test_data/string_keyed_dict/: commented.py  expected.py
