[project]
name = "linter"
version = "0.1.0"
dynamic = ["dependencies"]
requires-python = ">=3.12,<3.14"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "E", "ERA", "F", "I", "N", "PT", "PYI", "RET", "RUF", "SIM", "UP", "W"]
extend-ignore = ["B028", "E501", "F811", "PT011", "PT012", "PYI041", "RET504", "SIM118"]
per-file-ignores = { "test_data/*" = ["RUF100"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
warn_unreachable = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
