[project]
name = "linter"
version = "0.1.0"
dynamic = ["dependencies"]
requires-python = ">=3.12,<3.14"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
lint = "main:main_cli"

[tool.setuptools]
py-modules = ["main"]
packages = ["linter"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 100
exclude = ["test_data/general/syntax.py"]

[tool.ruff.lint]
extend-select = ["B", "E", "ERA", "F", "I", "N", "PT", "PYI", "RET", "RUF", "SIM", "UP", "W"]
extend-ignore = ["B028", "E501", "F811", "PT011", "PT012", "PYI041", "RET504", "SIM118"]
per-file-ignores = { "test_data/*" = ["RUF100"] }

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
warn_unreachable = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
strict_equality = true
exclude = ["test_data/"]

[tool.pytest.ini_options]
addopts = '--capture=sys'
